# open-ai-dashboard

./: .env  .gitignore  Cargo.toml  LICENSE  Makefile  README.md  biome.json  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rustfmt.toml  tsconfig.app.json  vite.config.ts
crates/common/: Cargo.toml
crates/common/src/: chrono.rs  download.rs  env.rs  errors.rs  files.rs  lib.rs  rand.rs  response.rs  rsa.rs  tracing.rs
crates/common/src/types/: dashboard.rs  message.rs  mod.rs
crates/web_server/: Cargo.toml  build.rs
crates/web_server/src/: lib.rs  main.rs
crates/web_server/src/controller/: auth.rs  download.rs  email_code.rs  metadata_info.rs  mod.rs  root.rs  user.rs
crates/web_server/src/service/: dashboard.rs
crates/web_server/src/utils/: app.rs  common.rs  config.rs  jwt.rs  mod.rs  template.rs
crates/web_server/src/utils/middlewares/: auth.rs  mod.rs  set_global_header.rs
crates/web_server/templates/: email.html  root.html
crates/web_server/templates/react/project/: biome.json  index.html  package.json  vite.config.ts
crates/web_server/templates/react/project/src/: app.tsx  index.css
crates/web_server/templates/react/project/src/components/chart/: index.tsx  utils.tsx
crates/web_server/templates/react/project/src/components/chart/g2-chart/: g2-chart.tsx
crates/web_server/templates/react/project/src/components/chart/indicator-card/: index.tsx
crates/web_server/templates/react/project/src/components/chart/list/: index.tsx
crates/web_server/templates/react/project/src/components/chart/recharts/: index.tsx
crates/web_server/templates/react/project/src/components/chart/table/: index.tsx  pagination.tsx
crates/web_server/templates/react/project/src/components/dashboard/: dashboard.tsx
crates/web_server/templates/react/project/src/components/ui/: badge.tsx  button.tsx  chart.tsx  dropdown-menu.tsx  pagination.tsx
crates/web_server/templates/react/project/src/pages/: index.tsx
crates/web_server/templates/react/project/src/utils/: fetcher.ts
crates/web_server_entity/: Cargo.toml
crates/web_server_entity/src/: analyze_daily_summary.rs  analyze_order_product_details.rs  chat.rs  dashboard.rs  email_code.rs  lib.rs  message.rs  metadata_info.rs  prelude.rs  user.rs  vote.rs
crates/web_server_migration/: Cargo.toml
crates/web_server_migration/src/: lib.rs  m20220101_000001_create_table.rs  m20250426_093200_chat.rs  m20250426_102845_message.rs  m20250426_112536_user.rs  m20250426_113943_vote.rs  m20250510_145926_analyze_daily_summary.rs  m20250510_150218_analyze_order_product_details.rs  m20250510_150408_metadata_info.rs  m20250510_150422_dashboard.rs  m20250517_142627_email_code.rs  main.rs
public/map-style/: style.json
scripts/: binaries.ts
src/: index.css  main.tsx  services.ts  types.ts  vite-env.d.ts
src-tauri/: .taurignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src-tauri/src/map_server/: command.rs
src-tauri/src/shapefile_server/: shapefile_to_geojson.rs  utilities.rs
src-tauri/src/utils/: app.rs  config.rs  disk.rs  log.rs  mod.rs  node_server.rs  services.rs  window.rs
src/components/: analyze.tsx  app-sidebar.tsx  copy-2-clipboard.tsx  greeting.tsx  login-form.tsx  multimodal-input.tsx  preview-attachment.tsx  sidebar-history-item.tsx  sidebar-history.tsx  sidebar-toggle.tsx  sidebar-user-nav.tsx  suggested-actions.tsx  tree-view.tsx
src/components/artifact/: artifact-close-button.tsx  artifact-messages.tsx  artifact.tsx
src/components/chart/: index.tsx
src/components/chart/g2-chart/: g2-chart.tsx  index.ts
src/components/chart/indicator-card/: index.tsx
src/components/chart/recharts/: index.tsx
src/components/chart/table/: index.tsx
src/components/chat/: chat-bar.tsx  chat-header.tsx  chat-provider.tsx  chat-setting.tsx  chat.tsx
src/components/code/: code-block.tsx  code-editor.tsx  index.ts
src/components/dashboard/: dashboard-actions.tsx  dashboard.tsx  hooks.ts  index.ts  progress-card.tsx
src/components/icons/: icons.tsx
src/components/map-renderer/: index.ts  map-renderer.ts
src/components/map-renderer/mapbox/: map.ts  utils.ts
src/components/map-renderer/maplibre/: map.ts
src/components/map-renderer/openlayers/: map.ts
src/components/map-ui/: map.tsx
src/components/markdown/: markdown.tsx
src/components/messages/: message-actions.tsx  message-editor.tsx  message-reasoning.tsx  message.tsx  messages.tsx
src/components/ui/: alert-dialog.tsx  breadcrumb.tsx  button.tsx  dialog.tsx  drawer.tsx  dropdown-menu.tsx  form.tsx  resizable.tsx  select.tsx  sheet.tsx  sidebar.tsx  toggle-group.tsx  toggle.tsx  tooltip.tsx
src/hooks/: use-artifact.ts  use-chat-visibility.ts  use-chatbar-loader.ts  use-scroll-to-bottom.ts  use-sync-reference.ts
src/layout/: index.tsx
src/lib/: constant.ts
src/pages/: chat.tsx  login.tsx  map.tsx  tree.tsx
src/router/: index.tsx
src/stores/: app.ts  theme.ts
src/utils/: index.ts  logger.ts  storage.ts  tauri.ts
src/utils/fetcher/: fetcher.ts  index.ts  middleware.ts
vector/: config.yaml
