[package]
name = "web_server_entity"
version = "0.1.0"
rust-version.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
sea-orm = { workspace = true}
serde = {workspace = true}
serde_json = {workspace = true}
common = { path = "../common" }
uuid = {workspace = true}
chrono = {workspace = true}
validator = {workspace = true}